# canterax

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: Makefile  make.bat  requirements.txt  usage_guide.ipynb
docs/source/: api-reference.md  conf.py  equilibrium.md  getting-started.md  index.md  quickstart.md  reactors.md  solution-guide.md  validation.md
docs/source/_static/: custom.css
docs/wiki/: Equilibrium.md  Kinetics.md  Modules.md  Thermodynamics.md  Validation.md
src/canterax/: __init__.py  constants.py  equilibrate.py  flow.py  kinetics.py  loader.py  mech_data.py  reactor.py  solution.py  thermo.py
src/canterax/solvers/: bdf.py
tests/: debug_units.py  jp10_utils.py  test_equilibrium.py  test_gradients.py  test_kinetics.py  test_load_jp10.py  test_loader.py  test_mass_flow_controller.py  test_reactor.py  test_solution_thermophase.py  test_thermo.py  test_validation_suite.py  trace_wdot_divergence.py
